--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>School Planner PWA</title>
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="./manifest.json" />
   </head>
   <body>
     <div id="root"></div>
-    <script src="../src/index.js"></script>
+    <script type="module" src="./src/index.js"></script>
   </body>
 </html>
